# font-generator

./: .gitignore  Cargo.toml  README.md
docs/: CLI.md  CONFIGURATION.md  DESIGN.md  INTEGRATION.md  LIMITATIONS.md  PLAN.md  REQUIREMENTS.md  SETUP.md  SPECIFICATIONS.md  TROUBLESHOOTING.md
docs/ADR/: 202606041017.md  202606041204.md  202606041411.md  202606041418.md  202606042113.md  202606061325.md  202606081648.md
docs/TASK/: 202606041027.md  202606041204.md  202606041411.md  202606041418.md  202606041429.md  202606041440.md  202606081648.md  current-task.md
examples/: chars.txt  fontgen.toml
examples/c/: minimal_usage.c
examples/rust/: minimal_usage.rs
src/: alpha.rs  chars.rs  cli.rs  config.rs  error.rs  font.rs  lib.rs  main.rs  model.rs
src/output/: c.rs  mod.rs  rust.rs
tests/: generated_output.rs
