[package]
name = "font-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fontdue = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "1.1.2"
unicode-segmentation = "1.12.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"
indexing_slicing = "deny"
